--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <a href=""
                 ><button>
                   <img src="images/8293344_1280.jpg" alt="" />
-                  <p class="member_name">しりゅー</p>
+                  <p class="member_name">しー坊</p>
                   <p class="member_work">YouTuber</p>
                 </button></a
               >
